# device-manager

./: CMakeLists.txt  LICENSE  README.md
include/: device_manager.h
src/: device-manager.cpp  main.cpp
